[package]
name = "junctor"
version = "0.1.0"
authors = ["Ana Hobden <operator@hoverbear.org>"]
edition = "2018"
description = "Nothing quite yet!"
license = "MIT"
repository = "github.com/Hoverbear-Consulting/junctor"
homepage = "junctor.radio"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
alloc-cortex-m = "0.4.0"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
nrf52840-pac = "0.9.0"
once_cell = { version = "1.4.0", default-features = false }
tracing = { version = "0.1.13", default-features = false, features = ["attributes"] }
indexmap = { version = "1.5.1", default-features = false }
fnv = { version = "1.0.7", default-features = false }

[build-dependencies]
built = { version = "0.4", default-features = false, features = ["git2", "chrono", "semver", "nightly"] }

# optimize code in both profiles
[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

# faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[target.thumbv7m-linux-eabi.dev-dependencies.utest-macros]
git = "https://github.com/japaric/utest"

[target.thumbv7m-linux-eabi.dev-dependencies.test]
git = "https://github.com/japaric/utest"

[target.thumbv7m-linux-eabi.dev-dependencies.utest-cortex-m-qemu]
git = "https://github.com/japaric/utest"