[package]
name = "junctor"
version = "0.1.0"
authors = ["Ana Hobden <operator@hoverbear.org>"]
edition = "2018"
description = "Nothing quite yet!"
license = "MIT"
repository = "github.com/Hoverbear-Consulting/junctor"
homepage = "junctor.radio"
build = "build.rs"

[dependencies]
cortex-m = { version = "0.6.0", default-features = false }
cortex-m-rt = { version = "0.6.10", default-features = false }
alloc-cortex-m = { version = "0.4.0", default-features = false }
rtt-target = { version = "0.2.0", default-features = false, features = ["cortex-m"] }
nrf52840-pac = { version = "0.9.0", default-features = false }
once_cell = { version = "1.4.0", default-features = false }
tracing = { version = "0.1.13", default-features = false, features = ["attributes"] }
indexmap = { version = "1.5.1", default-features = false }
fnv = { version = "1.0.7", default-features = false }

[build-dependencies]
built = { version = "0.4", default-features = false, features = ["git2", "chrono", "semver", "nightly"] }

[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false